--- a/assets/scss/unifty/_typography.scss
+++ b/assets/scss/unifty/_typography.scss
@@ -41,3 +41,7 @@ h3 {
   // color: var(--subheading-color);
   margin: 0 0 1rem;
 }
+
+.text-muted a {
+  color: var(--heading-color);
+}
