--- a/assets/scss/unifty/layout/_sidebar.scss
+++ b/assets/scss/unifty/layout/_sidebar.scss
@@ -72,19 +72,19 @@
     height: .1rem;
   }
   &::-webkit-scrollbar-thumb {
-    background: linear-gradient(0deg, #5c5c73 27%,#8b6084 60%);
+    background: var(--scrollbar-thumb);
     border-radius: 10px;
   }
   &::-webkit-scrollbar-thumb:hover {
-    background: linear-gradient(13deg, #414166 14%,#eb7bd6 64%);;
+    background: var(--scrollbar-thumb-hover);
   }
   &::-webkit-scrollbar-track {
-    background: rgba(253, 121, 226, .1);
+    background: var(--scrolbar-track);
     border-radius: 10px;
-    box-shadow: inset 7px 10px 12px #121a21;
+    box-shadow: inset 7px 10px 12px var(--scrollbar-track-shadow);
   }
   &::-webkit-scrollbar-track:hover {
-    background: #666666;
+    background: var(--scrollbar-track-hover);
   }
 }
 
